<resources>
    <string name="app_name">ReachUs</string>
    <string name="hint">Enter First Name </string>
    <string name="hint2">Enter Last Name</string>
    <string name="hint3">Enter Phone Number</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="aboutus"> Our community ,  ReachUS serves you the safe services. We provide home services such as maid service, repairing, cleaning at your doorstep . We are here for your ease. All the Users here have the flexibility to choose from a variety of services and professionals on this platform.
In case of any inconvenience or doubt , do contact us through contact us section....
</string>
    <string name="about2">Have comfort...... 🙂Relax…..</string>
    <string name="about3">This is our service , your conveniency !!!</string>
    <string name="frg_pass"> Provide your accounts email for which you want to reset your password!</string>
</resources>