<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPage"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font1"
        android:text="Login Page"
        android:layout_gravity="center"
        android:textSize="50sp"
        android:layout_marginTop="100sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10sp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100sp"
            android:layout_weight=""
            android:fontFamily="@font/font6"
            android:text=" First Name :"
            android:textAlignment="center"
            android:textSize="25sp" />
       <EditText
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_weight="0.60"
            android:inputType="text"
           android:fontFamily="@font/font6"
           android:textSize="25sp"
           android:hint="@string/hint"
           android:layout_marginTop="100sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10sp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_weight=""
            android:fontFamily="@font/font6"
            android:text=" Last Name :"
            android:textAlignment="center"
            android:textSize="25sp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.60"
            android:inputType="text"
            android:fontFamily="@font/font6"
            android:textSize="25sp"
            android:hint="@string/hint2"
             />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10sp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font6"
            android:text=" Phone:"
            android:textAlignment="center"
            android:textSize="25sp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.60"
            android:inputType="phone"
            android:fontFamily="@font/font6"
            android:textSize="25sp"
            android:hint="@string/hint3"
             />
    </LinearLayout>

</LinearLayout>